--- a/Kasa/package.json
+++ b/Kasa/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass": "sass  --watch ./SASS/main.scss:./assets/css/styles.css "
+    "sass": "sass --update  --no-source-map --watch ./SASS/main.scss:./assets/css/styles.css "
   },
   "eslintConfig": {
     "extends": [
